--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,80 @@
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f0f0f0;
-  margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+    margin: 0;
 }
 .title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 .table-container {
-  max-height: 200px; /* Adjust as needed */
-  overflow-y: auto;
-  width: 100%;
-  max-width: 600px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.table-title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 table {
-  border-collapse: collapse;
-  width: 100%;
-  max-width: 600px;
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
+    border-collapse: collapse;
+    width: 100%;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
 th,
 td {
-  border: 1px solid #ccc;
-  padding: 10px;
-  text-align: left;
-  width: 20%; /* 100% divided by 5 columns */
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+    width: 20%; /* 100% divided by 5 columns */
 }
 th {
-  background-color: #f2f2f2;
-  font-weight: bold;
-  text-align: center;
+    background-color: #f2f2f2;
+    font-weight: bold;
+    text-align: center;
 }
 tbody td:first-child {
-  width: 10%; /* Adjust width as needed */
+    width: 10%; /* Adjust width as needed */
+}
+
+  /* Dtpage */
+.payment-process {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.step {
+    display: flex;
+    align-items: center;
+}
+
+.box {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 20px 40px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.arrow {
+    width: 40px;
+    height: 40px;
+    background-color: #4CAF50;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    margin: 0 20px;
 }
